kubernetes/apps/soft-serve/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soft-serve
  labels:
    app: soft-serve
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: soft-serve
  template:
    metadata:
      labels:
        app: soft-serve
    spec:
      containers:
        - name: soft-serve
          image: charmcli/soft-serve:v0.12.2 # {"$imagepolicy": "apps:soft-serve"}
          ports:
            - name: ssh
              containerPort: 23231
            - name: http
              containerPort: 23232
          readinessProbe:
            tcpSocket:
              port: ssh
            periodSeconds: 10
            failureThreshold: 6
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /soft-serve
            - name: gitconfig
              mountPath: /etc/soft-serve
              readOnly: true
            - name: github-token
              mountPath: /run/secrets/github
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: soft-serve-data-pvc
        - name: gitconfig
          configMap:
            name: soft-serve-gitconfig
        - name: github-token
          secret:
            secretName: soft-serve
            items:
              - key: github-token
                path: token
